--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.sviperll</groupId>
     <artifactId>maven-profiledep-extention</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <name>maven-profiledep-extention</name>
 
     <properties>
@@ -15,7 +14,8 @@
         <connection>scm:git:git@github.com:sviperll/maven-profiledep-extention.git</connection>
         <url>scm:git:git@github.com:sviperll/maven-profiledep-extention.git</url>
         <developerConnection>scm:git:git@github.com:sviperll/maven-profiledep-extention.git</developerConnection>
-    </scm>
+      <tag>maven-profiledep-extention-0.1</tag>
+  </scm>
 
     <dependencies>
         <dependency>
