--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.sviperll</groupId>
     <artifactId>maven-profiledep-extention</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <name>maven-profiledep-extention</name>
 
     <properties>
@@ -14,7 +14,7 @@
         <connection>scm:git:git@github.com:sviperll/maven-profiledep-extention.git</connection>
         <url>scm:git:git@github.com:sviperll/maven-profiledep-extention.git</url>
         <developerConnection>scm:git:git@github.com:sviperll/maven-profiledep-extention.git</developerConnection>
-      <tag>maven-profiledep-extention-0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <dependencies>
